<resources>
    <string name="app_name">Foxtrip</string>
    <string name="tv_email">Email</string>
    <string name="tv_main_mail">cloneappadobe@gmail.com</string>
    <string name="btn_filter">Bộ lọc nâng cao</string>
    <string name="til_search_tour_name">🔍 Tìm tour theo tên</string>
    <string name="tv_reserved">© 2025 Foxtrip. All rights reserved.</string>
    <string name="app_version">Phiên bản 1.0.0</string>
    <string name="home_title">Du lịch và trải nghiệm</string>
    <string name="home_subtitle">Trải nghiệm tạm thời với bộ sưu tập hình ảnh và video thực tế</string>
    <string name="btn_explore">Khám phá thêm</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="tv_confirm_password">Xác nhận mật khẩu</string>
    <string name="btn_add">Thêm</string>
    <string name="tour_section">Tour</string>
    <string name="tv_cart">Giỏ hàng</string>
    <string name="tv_empty_cart">Giỏ hàng trống</string>
    <string name="btn_add_to_cart">Thêm vào giỏ</string>
    <string name="search_hint">Nhập tour cần tra</string>
    <string name="search_result">Kết quả tìm kiếm</string>
    <string name="tv_selected_province">Tỉnh/Thành (chọn nhiều)</string>
    <string name="btn_selected_province">Chọn Tỉnh/Thành</string>
    <string name="tv_selected_category">Category (chọn nhiều)</string>
    <string name="btn_selected_category">Chọn Category</string>
    <string name="tv_range_price">Khoảng giá (VND)</string>
    <string name="min_price">Giá tối thiểu</string>
    <string name="max_price">Giá tối đa</string>
    <string name="tv_date">Ngày bắt đầu / kết thúc</string>
    <string name="btn_start">Ngày bắt đầu</string>
    <string name="btn_end">Ngày kết thúc</string>
    <string name="btn_delete">Xóa</string>
    <string name="til_search_order_id">Tìm mã đơn hàng</string>
    <string name="btn_confirm_order">Xác nhận đơn hàng</string>
    <string name="btn_delete_order">Xóa đơn hàng</string>
    <string name="btn_apply">Áp dụng</string>
    <string name="tv_order">Đơn hàng</string>
    <string name="tv_history">Lịch sử</string>
    <string name="tv_wallet">Ví khách hàng</string>
    <string name="tv_about_we">Về chúng tôi</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="tv_username">Tên người dùng</string>
    <string name="tv_tours">Tours</string>
    <string name="tv_tour_detail">Chi tiết tour</string>
    <string name="btn_end_tour">Kết thúc</string>
    <string name="tv_users">Người dùng</string>
    <string name="tv_chatbot">Trợ lý du lịch ✨</string>
    <string name="tv_order_info">Thông tin đơn hàng</string>
    <string name="tv_order_id">Mã đơn:</string>
    <string name="tv_order_status">Trạng thái:</string>
    <string name="tv_checkout">Thanh toán:</string>
    <string name="tv_total_price">Tổng tiền:</string>
    <string name="tv_create_date">Ngày tạo:</string>
    <string name="tv_fullname">Họ và tên:</string>
    <string name="tv_fullname_hint">Họ và tên</string>
    <string name="tv_title_phone">Điện thoại:</string>
    <string name="tv_title_phone_hint">Số điện thoại</string>
    <string name="tv_title_email">Email:</string>
    <string name="btn_checkout">Đặt hàng</string>
    <string name="btn_payment">Thanh toán</string>
    <string name="tv_default_price">0 VND</string>
    <string name="tv_default_tour">Số sản phẩm: 0</string>
    <string name="tv_search_email">Tìm kiếm email</string>
    <string name="tv_balance_wallet">Số dư: 0 VND</string>
    <string name="tv_zero_search">Không tìm thấy kết quả phù hợp</string>
    <string name="tv_emtpy_order">Không có đơn hàng</string>
    <string name="tv_emtpy_user">Không có người dùng</string>
    <string name="tv_title_address">Địa chỉ:</string>
    <string name="tv_history_detail">Chi tiết lịch sử tour</string>
    <string name="tv_history_infor">Thông tin chuyến đi</string>
    <string name="tv_title_address_hint">Địa chỉ</string>
    <string name="tv_customers_infor">Thông tin khách hàng</string>
    <string name="tv_rule_services">Điều khoản dịch vụ</string>
    <string name="tv_order_detail">Chi tiết đơn hàng</string>
</resources>